Fixed alignment of textBodies

--- a/nextjs-frontend/styles/ButtonPane.module.css
+++ b/nextjs-frontend/styles/ButtonPane.module.css
@@ -1,7 +1,6 @@
 .leftpane {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   background-color: #434b5a;
   padding: 5px;
 }
