--- a/nextjs-frontend/styles/Editor.module.css
+++ b/nextjs-frontend/styles/Editor.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  height: 100vh;
 }
 
 .editor_header {
@@ -9,6 +10,7 @@
   justify-content: space-between;
   align-items: center;
   color: gray;
+  border-bottom: 3px solid #76777a;
 }
 
 .editor_header_left {
@@ -18,7 +20,7 @@
   padding: 10px;
 }
 
-.editor_header_left > .header_left_text {
+.header_left_text {
   padding-left: 5px;
 }
 
@@ -37,19 +39,22 @@
 
 .editor_textareas {
   flex: 1;
+  flex-direction: row;
+  display: flex;
+  overflow-y: auto;
 }
 
 .editor_textarea {
-  flex: 0.5;
+  flex: 1;
   padding: 10px;
+  margin: 10px;
 }
 
 .editor_search {
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 15px;
+  margin-top: 20px;
 }
 
 .container {
