--- a/nextjs-frontend/styles/SettingsPane.module.css
+++ b/nextjs-frontend/styles/SettingsPane.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   flex: 0.25;
-  height: 100vh;
   background-color: #2f3135;
   color: gray;
 }
